# mice-py

./: .gitignore  CHANGELOG.md  LICENSE  LOGGING.md  README.md  READTHEDOCS_SETUP.md  example_usage.py  pyproject.toml  readthedocs.yaml
docs/: BUILD_DOCS.md
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  references.rst
docs/source/api/: index.rst  methods.rst  mice.rst  plotting.rst  pooling.rst  utilities.rst
docs/source/examples/: index.rst
docs/source/imputation/: index.rst
docs/source/plotting/: index.rst
docs/source/theory/: index.rst  method_details.rst  missing_data_mechanisms.rst  multiple_imputation_theory.rst  rubins_rules.rst
docs/source/user_guide/: best_practices.rst  convergence_diagnostics.rst  imputation_methods.rst  index.rst  mice_overview.rst  pooling_analysis.rst  predictor_matrices.rst  understanding_missing_data.rst
examples/: 01_basic_imputation.ipynb  02_imputation_methods.ipynb  03_advanced_parameters.ipynb  04_analysis_workflow.ipynb  05_diagnostic_plots.ipynb  README.md
imputation/: MICE.py  PMM.py  README_pooling.md  __init__.py  cart.py  constants.py  logging_config.py  mice_result.py  midas.py  pooling.py  rf.py  sample.py  sampler.py  utils.py  validators.py
plotting/: README.md  __init__.py  diagnostics.py  diagnostics_example.ipynb  utils.py  visualization_example.ipynb
simulations/Data/Inputs/: categorical_interaction.csv  interactions_simulated_large.csv  interactions_simulated_medium.csv  interactions_simulated_small.csv  linear_main.csv
simulations/Data/Results/: exp1_summary_categorical_interaction.csv  exp3_summary.csv  (+4 more)
tests/: README.md  __init__.py  conftest.py  test_integration.py
tests/test_imputation/: __init__.py  test_methods.py  test_mice.py  test_validators.py
tests/test_plotting/: test_diagnostics.py  test_utils.py
