[project]
name = "mice-py"
version = "0.1.0"
description = "A comprehensive Python implementation of Multiple Imputation by Chained Equations (MICE) for handling missing data"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Anna-Carolina Haensch", email = "Anna-Carolina.Haensch@stat.uni-muenchen.de"},
    { name = "The Anh Vu", email = "Theanh_v99@yahoo.de"},
    { name = "Zhanna Lopuliak", email = "zhanna.Lopuliak@gmail.com"}
]
license = { text = "MIT" }


dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "patsy>=1.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "tqdm>=4.60",
    "seaborn>=0.12",
    "matplotlib>=3.7"
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-timeout>=1.4"
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.2",
]


dev = [
    "black",
    "flake8",
    "mypy",
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-timeout>=1.4"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["imputation", "plotting"]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
]

markers = [
    "unit: Unit tests for individual functions/classes",
    "integration: Integration tests for workflows",
    "plotting: Tests for plotting functionality",
    "slow: Tests that take longer to run",
]

timeout = 300

filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]